# HSI_Pansharpenig_SW-HW

./: README.md
Hardware accelerator/Hardware Accelerator - Pansharpening - 4 cores - Indian Pines/Memory Files/: pan_sharp_system_behav.wcfg  pansharpening_spp.xpr
Hardware accelerator/Hardware Accelerator - Pansharpening - 4 cores - Indian Pines/contraints and configs/: pan_sharp_constraints.xdc
Hardware accelerator/Hardware Accelerator - Pansharpening - 4 cores - Indian Pines/src VHDL/src/: addrConvHor.vhd  addrConvVer_control.vhd  convolution_datapath.vhd  counter_cycles_up.vhd  eq_7.vhd  module_fifo_regs_no_flags.vhd  pack.vhd  pan_shar_axis_interface_write_mem.vhd  pan_sharp_control.vhd  pan_sharp_datapath.vhd  pan_sharp_system.vhd  sub_addr.vhd
Hardware accelerator/Hardware Accelerator - Pansharpening - 4 cores - Indian Pines/src VHDL/testbench/: tb_core.vhd
Hardware accelerator/Hardware Accelerator - Pansharpening - Chikusei/Memory Files/General/: extended_init.coe  pan_sharp_constraints.xdc  pan_sharp_system_behav.wcfg  pansharpening_spp.xpr
Hardware accelerator/Hardware Accelerator - Pansharpening - Chikusei/Memory Files/Memory Files to increase 2x/: chikusei_0c_extended_init_48.coe  chikusei_1c_extended_init_48.coe  chikusei_3c_extended_init_48.coe  chikusei_4c_extended_init_48.coe  (+5 more)
Software - Pansharpening NLV/Configs/: CMakeLists.txt  Makefile
Software - Pansharpening NLV/Metrics/: image_compare.m
Software - Pansharpening NLV/src/: io_png.c  libauxiliar.cpp  libauxiliar.h  libpansharpening.cpp  libpansharpening.h  pansharpening_ipol.cpp
(+1017 files in other folders)
